# oxygen

./: Cargo.toml  DOCS.md  INSTALL.md  PKGBUILD  PKGBUILD-git  README.md  build-arch-package.sh  install.sh  runner-debug.sh  uninstall.sh
.github/workflows/: ci.yml
src/: config.rs  lib.rs  main.rs  utils.rs
src/commands/: build.rs  doctor.rs  init.rs  mod.rs  tools.rs
src/oxygen-0.2.0/: COMMANDS.md  README.md
src/oxygen-0.2.0/src/commands/: check.rs  deps.rs  env.rs  gpg.rs  info.rs  toolchain.rs
