[package]
name = "oxygen"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
console = "0.15"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["process", "rt", "rt-multi-thread", "macros"] }
anyhow = "1.0"
toml = "0.8"
