[package]
name = "oxygen"
version = "0.2.0"
edition = "2024"
authors = ["Christopher Kelley <ckelley@ghostkellz.sh>"]
license = "MIT OR Apache-2.0"
description = "The essential Rust dev environment enhancer"
repository = "https://github.com/ghostkellz/oxygen"
homepage = "https://github.com/ghostkellz/oxygen"
readme = "README.md"
keywords = ["rust", "development", "cli", "toolchain", "productivity"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
console = "0.15"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["process", "rt", "rt-multi-thread", "macros"] }
anyhow = "1.0"
toml = "0.8"

[[bin]]
name = "oxygen"
path = "src/main.rs"

[[bin]]
name = "oxy"
path = "src/main.rs"
